apps/base/obsidian/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian
  namespace: obsidian
spec:
  type: ClusterIP
  selector:
    app: obsidian
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
